
0.9.12e May 05, 2008
 * test updates
 * Romanian translation by Reteaua PTM.

0.9.12d Feb 22, 2008
 * Added download count notification while downloading packages (Sergio)
 * Fix for parsing dependencies that have a dash in the package name

0.9.12c Oct 27, 2007
 * updated russian translation from ru@li.org
 * allow version, list, available, installed, show, and search options to be
   run without write privileges to the working directory (thanks
   Anders Bjorklund and John Babiak)
 * compile time definition for SLACKWARE_EXTRA_TESTING_PASTURE_WORKAROUND
   (see package.c for comment)

0.9.12b Sep 18, 2007
 * Fixed message formatting for 'Need to get' translations.
 * Fixed message formatting of 'After unpacking' translations.
 * added slapt_regex_extract_match()
 * bug fix for detecting reverse dependencies when removing packages

0.9.12a Aug 18, 2007
 * added gnupg as explicit dependency
 * FAQ update mentioning GPGME troubleshooting.
 * Improved handling of GPGME errors
 * bug fix for segfault if gpg verification fails for an uncompressed
   checksums file.  Thanks to QliXed.

0.9.12 Jul 10, 2007
 * updated doc/libslapt.3 manpage
 * russian an ukrainian updates from sin
 * updated translations
 * rewind checksum file after verifying it
 * polish updates from Piotr
 * german updates by Manfred
 * added GPG signature verification via gpgme (thanks Pat Volkerding for
   adding gpgme to -current)
 * Updated downloading in libslapt for better notification.  This also resulted
   in some simplification in code.  Removed unused DEBUG ifdefs.  Removed
   deprecated translation strings.  Added error condition strings and
   slapt_strerror() function.  New translation strings.  Bumped to 0.9.12.
 * Wrapped generated slapt.h in ifndef guard
 * Added initial unit testing to tree
   (requires Check from http://check.sourceforge.net)
 * Individual package download size now represented by a float (Ricardo Garcia)
 * replaced useless strlen(constant) calls